kube/guestbook-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
  namespace: argocd-test
  labels:
    info: HelloPoro
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - containerPort: 80
