kube/guestbook-service.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: argocd-test
spec:
  ports:
  - port: 8443
    targetPort: 80
  selector:
    app: guestbook-ui
