kube/guestbook-eks.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-eks-a
  namespace: poro
  labels:
    app: hello-eks-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-eks-a
  template:
    metadata:
      labels:
        app: hello-eks-a
    spec:
      containers:
      - name: hello
        image: public.ecr.aws/aws-containers/hello-eks-anywhere:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-eks-a
  namespace: poro
spec:
  type: NodePort
  selector:
    app: hello-eks-a
  ports:
    - port: 80
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-http-ingress
  namespace: poro
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-eks-a
          servicePort: 80
        path: /v2
    host: guestbook.k8s.intranet.loxon.eu
  # tls:
  # - hosts:
  #   - guestbook.k8s.intranet.loxon.eu
  #   secretName: k8s-tls-bundle
